tests/semantic/valid/19_r2_with_uses_alias.hulk
with (1 as a) print(a);
