tests/semantic/invalid/71_g_with_assign_alias.hulk
with (1 as a) a := 2;
